2005-07-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: ...but don't break continuation option.

2005-07-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make failed unpacking of source a fatal error.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Improve POSIX symbol imports.

2005-07-13  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Support 10.4.2.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: flush STDIN before reading each user input.

2005-07-12  Matthew Sachs  <msachs@apple.com>

	* Services.pm: Looser checking of GCC version in enforce_gcc;
	we don't want to differentiate between 4.0.0 and 4.0.1.

2005-07-12  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Install exactly the version that's being injected.

2005-07-12  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Reimplement Repair Permissions bug fix using gcc_select
	--force, for better reliability (we hope!)

2005-07-11  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Note g++-wrapper code duplication.

2005-07-11  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Put path-prefix	stuff in Fink's .deb.

2005-07-07  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm, PkgVersion.pm: Automagically fix bug caused by Repair
	Permissions on Tiger.

2005-07-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Use apt-get-lockwait for AutoScanpackages.

2005-07-05  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm (bootstrap): Remove tar from phase 1 of bootstrap. 

2005-07-04  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Er, make the info-list caching actually work. I'll be taking
	that out soon anyhow.

2005-07-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify/Growl.pm: move event registration out of the constructor,
	for the purposes of speed.

2005-07-01  Daniel Macks  <dmacks@netspace.org>
