@@ -1,3 +1,7 @@
+2005-07-19  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* Configure.pm: Forward-port the obsolete-mirrors handling.
+
 2005-07-17  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm: ...but don't break continuation option.
